fixed scrollbar position on the experiment page

--- a/IndigoELN/src/main/webapp/assets/less/tabs.less
+++ b/IndigoELN/src/main/webapp/assets/less/tabs.less
@@ -178,8 +178,3 @@
         height: auto;
     }
 }
-
-.tab-components {
-  overflow-y: auto;
-  height: ~"calc(100vh - 330px)";
-}
